# agent-memory-experiment

./: .gitignore  CLAUDE.md  LICENSE  README.md  example.env  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_edit_reminder.py
.claude/rules/: notebooks.md
.claude/skills/new-method/: SKILL.md
.claude/skills/smoke/: SKILL.md
notebooks/: 01_locomo_dataset.ipynb  02_scoring.ipynb  03_memoryos.ipynb  04_zep.ipynb  05_nemori.ipynb
scripts/: fetch_data.py  fetch_reference.py  run_zep.sh
src/memlab/: __init__.py  config.py  embedding.py  llm.py  run.py
src/memlab/data/: __init__.py  locomo.py
src/memlab/evaluation/: __init__.py  metrics.py  scorer.py
src/memlab/methods/: __init__.py  base.py
src/memlab/methods/memoryos/: README.md  __init__.py  llm_ops.py  long_term.py  method.py  mid_term.py  prompt_templates.py  schema.py  short_term.py  utils.py
src/memlab/methods/nemori/: __init__.py  llm_ops.py  memory.py  method.py  prompt_templates.py  schema.py
src/memlab/methods/zep/: __init__.py  communities.py  graph.py  llm_ops.py  method.py  prompt_templates.py  schema.py  search.py
tests/: test_locomo.py  test_memoryos_stm.py  test_metrics.py  test_scorer.py
