[project]
name = "memlab"
version = "0.1.0"
description = "Agent-memory experiment harness & study guide — LoCoMo eval, MemoryOS re-implementation, pluggable memory methods"
readme = "README.md"
authors = [
    { name = "skiiwoo", email = "pko89403@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
]
